kubernetes-networks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-networks
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /index.html
spec:
  ingressClassName: nginx
  rules:
    - host: homework.otus
      http:
        paths:
          - path: /homepage
            pathType: Prefix
            backend:
              service:
                name: k8s-networks
                port:
                  number: 8000
